new login, splash screen, logout, stay log in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="desc_barang">Yamaha NMAX adalah salah satu kendaraan populer yang banyak digunakan oleh masyarakat. Salah satu fitur utama dari Yamaha NMAX adalah kapasitas penumpangnya yang mencapai hingga 2 orang, membuatnya ideal untuk perjalanan. Selain itu, kendaraan ini memiliki tampilan yang menarik dengan warna Silver, memberikan kesan modern dan stylish.</string>
     <string name="icontoko">icontoko</string>
     <string name="welcome">Welcome</string>
+    <string name="title">Title</string>
+    <string name="register">Register</string>
 </resources>
